More fleshing out of the profile feature - added a little widget to the list screens to allow you to Register/Login/Logout, added a CAPTCHA to the registration screen, fixed a bunch of niggling errors, got auto profile generation all set when you subscribe to a list and a bunch of things I've since forgotten about.

--- a/dada/DADA/Template/templates/default_list_template.tmpl
+++ b/dada/DADA/Template/templates/default_list_template.tmpl
@@ -43,6 +43,8 @@
    </div><!-- ends id="Header" -->
    
    <div id="Content">
+	
+	<!-- tmpl_var profile_widget --> 
 
     <!-- tmpl_var content --> 
 
