Lots: Made it easier to understand when you're subscribed to a list, just by being logged in and being on the list/archive screens, added the feature to allow only subscribers to view a list's archived messages, made a feature to allow users with profiles to skip the subscription/unsubscription confirmation process, added field attributes to the profile fields - currently, the only new attribute is, "label", but more are sketched out and AND! I made the profile fields re-ordered...able. LOTS. Tons. I'm probably going to stop really soon.

--- a/dada/DADA/Template/templates/archive_list_widget.tmpl
+++ b/dada/DADA/Template/templates/archive_list_widget.tmpl
@@ -1,6 +1,15 @@
 <!-- begin archive_list_widget.tmpl -->
 
-<h2>Archives:</h2> 
+<!-- tmpl_if allowed_to_view_archives --> 
+
+<!-- tmpl_else --> 
+
+	<p class="error">
+		Only subscribers may view this list's message archives.
+	</p> 
+	
+<!-- /tmpl_if -->
+
 
 
 
