--- a/dada/DADA/Template/templates/profile_login.tmpl
+++ b/dada/DADA/Template/templates/profile_login.tmpl
@@ -84,7 +84,7 @@
 
 
 	<div class="buttonfloat">
-		<input type="submit" value="Login Into Your Profile" /> 
+		<input type="submit" value="Log Into Your Profile" /> 
 	</div>
 	<div class="floatclear"></div>
 
