--- a/dada/DADA/Template/templates/default_screen.tmpl
+++ b/dada/DADA/Template/templates/default_screen.tmpl
@@ -27,32 +27,37 @@
          <!-- tmpl_var list_settings.info -->
         <!-- </p> -->
         
+		
         <!-- tmpl_if list_settings.show_archives -->
-            
-            <!-- tmpl_if newest_archive_blurb -->
+
+            <!-- tmpl_unless list_settings.archives_available_only_to_subscribers -->
+
+            	<!-- tmpl_if newest_archive_blurb -->
                 
-                <!-- TODO: replace this here blockquote with CSS -->
-                <blockquote>
-                 <p>
-                  <strong>
-                   <a href="<!-- tmpl_var PROGRAM_URL -->/archive/<!-- tmpl_var list_settings.list escape="HTML" -->/newest/">
-                    Last Message: <!-- tmpl_var newest_archive_subject -->
-                   </a>
-                  </strong>
-                 </p>
-                 <p>
-                  <em>
-                   <!-- tmpl_var newest_archive_blurb -->...
-                  </em>
-                 </p>
-                 <p style="text-align:right">
-                  <a href="<!-- tmpl_var PROGRAM_URL -->/archive/<!-- tmpl_var list_settings.list -->/newest/">
-                   More...
-                  </a>
-                 </p>
-                </blockquote>
+               	 <!-- TODO: replace this here blockquote with CSS -->
+	                <blockquote>
+	                 <p>
+	                  <strong>
+	                   <a href="<!-- tmpl_var PROGRAM_URL -->/archive/<!-- tmpl_var list_settings.list escape="HTML" -->/newest/">
+	                    Last Message: <!-- tmpl_var newest_archive_subject -->
+	                   </a>
+	                  </strong>
+	                 </p>
+	                 <p>
+	                  <em>
+	                   <!-- tmpl_var newest_archive_blurb -->...
+	                  </em>
+	                 </p>
+	                 <p style="text-align:right">
+	                  <a href="<!-- tmpl_var PROGRAM_URL -->/archive/<!-- tmpl_var list_settings.list -->/newest/">
+	                   More...
+	                  </a>
+	                 </p>
+	                </blockquote>
+	
+				<!-- /tmpl_if --> 
                 
-            <!--/tmpl_if-->
+            <!-- /tmpl_unless-->
         
         <!--/tmpl_if-->
     
