--- a/dada/DADA/Template/templates/error_no_show_archives_screen.tmpl
+++ b/dada/DADA/Template/templates/error_no_show_archives_screen.tmpl
@@ -8,6 +8,6 @@
  There are no messages archived for this list that are available to be viewed.
 </p>
 
-<!--- tmpl_var list_settings.list_name --><
+<!--- tmpl_var list_settings.list_name -->
 
 <!-- tmpl_var error_no_show_archives_screen.tmpl --> 
