--- a/dada/DADA/Template/templates/profile_widget.tmpl
+++ b/dada/DADA/Template/templates/profile_widget.tmpl
@@ -1,12 +1,13 @@
 <!-- begin profile_widget.tmpl --> 
 
-<p style="text-align:right"> 
-	<!-- tmpl_if is_logged_in --> 
-		Hello, <!-- tmpl_var profile.email --> [<a href="<!-- tmpl_var PROGRAM_URL -->?f=profile">Profile Home</a> | <a href="<!-- tmpl_var PROGRAM_URL -->?f=profile_logout">Logout</a>]
-	<!-- tmpl_else --> 
-		[<a href="<!-- tmpl_var PROGRAM_URL -->?f=profile_login">Register/Log In</a>]
-	<!-- /tmpl_if --> 
-</p> 
-
+<!-- tmpl_if profiles_enabled --> 
+	<p style="text-align:right"> 
+		<!-- tmpl_if is_logged_in --> 
+			Hello, <!-- tmpl_var profile.email --> [<a href="<!-- tmpl_var PROGRAM_URL -->?f=profile">Profile Home</a> | <a href="<!-- tmpl_var PROGRAM_URL -->?f=profile_logout">Logout</a>]
+		<!-- tmpl_else --> 
+			[<a href="<!-- tmpl_var PROGRAM_URL -->?f=profile_login">Register/Log In</a>]
+		<!-- /tmpl_if --> 
+	</p> 
+<!-- /tmpl_if --> 
 <!-- end profile_widget.tmpl --> 
 
