Added checkbox to allow you to chose to run amoke and overwrite profile info, or, just leave it alone.

--- a/dada/DADA/Template/templates/add_email_screen.tmpl
+++ b/dada/DADA/Template/templates/add_email_screen.tmpl
@@ -501,6 +501,14 @@ Invalid Email Addresses
 
 
  <div class="buttonfloat">
+  <p>
+	<input type="checkbox" id="fields_options_mode" name="fields_options_mode" value="preserve" />
+	<label for="fields_options_mode">
+		Preserve any current subscriber fields information
+	</label>
+	
+  </p>
+
   <input type="button" class="cautionary" value="<< Re-Enter Email List" onclick="history.back();return false;" />
 
 <!-- tmpl_if type_isa_list --> 
