--- a/dada/DADA/Template/templates/profile_login.tmpl
+++ b/dada/DADA/Template/templates/profile_login.tmpl
@@ -188,7 +188,7 @@
 		<label for="reset_email" style="width: 7em;float: left;text-align: right;margin-right: 0.5em;display: block">
 			Email Address:
 		</label>
-		 <input type="text" id="reset_email" name="reset_email" value="<!-- tmpl_var email -->" />
+		 <input type="text" id="reset_email" name="email" value="<!-- tmpl_var email -->" />
 	</p> 
 	
 
