--- a/dada/DADA/Template/templates/profile_login.tmpl
+++ b/dada/DADA/Template/templates/profile_login.tmpl
@@ -1,6 +1,11 @@
 <!-- being profile_login.tmpl --> 
 
 
+<p style="text-align:right">
+	<a href="<!-- tmpl_var PROGRAM_URL -->?f=profile_help">
+		What are <!-- tmpl_var PROGRAM_NAME --> Profiles?
+	</a> 
+</p>
 <!-- 
 
 	<!-- tmpl_if errors --> 
