--- a/dada/DADA/Template/templates/profile_register.tmpl
+++ b/dada/DADA/Template/templates/profile_register.tmpl
@@ -1,7 +1,15 @@
 <!-- begin profile_register.tmpl --> 
 
+<h1>
+	Profile Registering is Successful!
+</h1> 
+
 <p>
- Profile registration is all set - just await the email with the activation link and we'll get this show on the road, 
+	We've just sent an email to you, with the your Profile Authorization Code.
+</p> 
+
+<p>
+	Once you've followed the Profile Authorization Link, your <!-- tmpl_var PROGRAM_NAME --> Profile will be activated!
 </p> 
 
 <!-- end profile_register.tmpl --> 
