--- a/dada/DADA/Template/templates/example_dada_config.tmpl
+++ b/dada/DADA/Template/templates/example_dada_config.tmpl
@@ -68,6 +68,27 @@ $LIST_IN_ORDER = 1;
 
 
 
+# Dada Mail Profile Options
+
+$PROFILE_ENABLED                         = 1; 
+$PROFILE_EMAIL                           = ''; 
+$PROFILE_ENABLE_CAPTCHA                  = 1;
+$PROFILE_ENABLE_MAGIC_SUBSCRIPTION_FORMS = 1;
+
+$PROFILE_COOKIE_PARAMS = {
+	-name   => 'dada_profile',  
+    -path    => '/',
+    -expires => '+7d',	
+};
+
+$PROFILE_GRAVATAR_OPTIONS = {
+	enable_gravators     => 1, 
+	default_gravatar_url => undef, 
+};
+
+#/ Dada Mail Profile Options
+
+
 # start cut for list settings defaults
 =cut
 
