Put in new backend options for the Clickthrough Tracker, it now has SQL options, which it didn't, before. Tests included.

--- a/dada/DADA/Template/templates/example_dada_config.tmpl
+++ b/dada/DADA/Template/templates/example_dada_config.tmpl
@@ -31,7 +31,7 @@ $ARCHIVE_DB_TYPE          = 'SQL';
 $SETTINGS_DB_TYPE         = 'SQL'; 
 $SESSION_DB_TYPE          = 'SQL'; 
 $BOUNCE_SCORECARD_DB_TYPE = 'SQL';
-
+$CLICKTHROUGH_DB_TYPE     = 'SQL'; 
 
 %SQL_PARAMS = ( 
 
@@ -52,11 +52,16 @@ $BOUNCE_SCORECARD_DB_TYPE = 'SQL';
 	user             => '',          
 	pass             => '',
 
-	subscriber_table    => 'dada_subscribers',
-	archives_table      => 'dada_archives', 
-	settings_table      => 'dada_settings', 
-	session_table       => 'dada_sessions', 
-	bounce_scores_table => 'dada_bounce_scores', 
+	subscriber_table                => 'dada_subscribers',
+	profile_table                   => 'dada_profile', 
+	profile_fields_table 	        => 'dada_profile_fields', 
+	profile_fields_attributes_table => 'dada_profile_fields_attributes',
+	archives_table                  => 'dada_archives', 
+	settings_table                  => 'dada_settings', 
+	session_table                   => 'dada_sessions', 
+	bounce_scores_table             => 'dada_bounce_scores',
+	clickthrough_urls_table         => 'dada_clickthrough_urls',
+
 
 );
 
