--- a/dada/DADA/Template/templates/profile_help.tmpl
+++ b/dada/DADA/Template/templates/profile_help.tmpl
@@ -13,9 +13,14 @@ update your own information.
 
 <p>
 	Having a profile and being logged in also allows you to view subscriber-only archives
-and have subsription/unsubscription forms pre-filled out thourought <!-- tmpl_var PROGRAM_NAME -->. 
+and have subscription/unsubscription forms pre-filled out thourought <!-- tmpl_var PROGRAM_NAME -->. 
 
 </p> 
 
+<p>
+	<a href="<!-- tmpl_var PROGRAM_URL -->?f=profile_login">
+		&lt;-- Back to Profile Login
+	</a> 
+</p>
 
 <!-- end profile_help.tmpl --> 
