speling mistake fixxed.

--- a/dada/DADA/Template/templates/profile_help.tmpl
+++ b/dada/DADA/Template/templates/profile_help.tmpl
@@ -13,7 +13,7 @@ update your own information.
 
 <p>
 	Having a profile and being logged in also allows you to view subscriber-only archives
-and have subscription/unsubscription forms pre-filled out thourought <!-- tmpl_var PROGRAM_NAME -->. 
+and have subscription/unsubscription forms pre-filled out throughout <!-- tmpl_var PROGRAM_NAME -->. 
 
 </p> 
 
