Got the error for when you attempt to reset a pass to a profile that doesn't exist working

--- a/dada/DADA/Template/templates/profile_login.tmpl
+++ b/dada/DADA/Template/templates/profile_login.tmpl
@@ -194,6 +194,12 @@
 
 <h1>Forgot Your Profile Password?</h1> 
 
+<!-- tmpl_if error_profile_reset_password --> 
+	 <p class="error">
+		User Unknown - have you registered?
+	</p>
+<!-- /tmpl_if --> 
+
 <fieldset> 
 
 <form action="<!-- tmpl_var PROGRAM_URL -->" method="post" > 
