More Documentation and Testing and tweaking code to reflect changes to the new API.
One disturbing development is finding that some methods don't work with SQLite (2) and one of those doesn't work with PostgreSQL - which stinks. For the moment, I've disabled the feature in the GUI, but it's just sheer laziness as to why they aren't included.

--- a/dada/DADA/Template/templates/subscriber_fields.tmpl
+++ b/dada/DADA/Template/templates/subscriber_fields.tmpl
@@ -226,6 +226,9 @@ Edit Field
 	            <input type="submit" value="[edit]" class="cautionary" style="margin:0px" /> 
 	            </form> 
 	
+	
+		<!-- tmpl_if can_move_columns --> 
+		
 				<form style="margin: 0pt; display: inline;">			
 					<input type="hidden" name="f" value="subscriber_fields" /> 
 	             	<input type="hidden" name="process" value="edit_field_order" /> 
@@ -243,6 +246,7 @@ Edit Field
 					
 					<input type="submit" value="v" class="cautionary" style="margin: 0pt;" title="move this field down" />
 				</form>
+				<!-- /tmpl_if --> 
 				
 	             </td> 
 	
