Split DADA::Profile::Fields into another module: DADA::ProfileFieldsManager, which edits the actual schema of the profile fields, while allowed DADA::Profile::Fields to actual add/edit/delete thingies in the table. Made sense, at the time. All tests should still pass.

--- a/dada/DADA/Template/templates/profile_home.tmpl
+++ b/dada/DADA/Template/templates/profile_home.tmpl
@@ -87,11 +87,9 @@
 
 	
 <h1>
-Your Subscriptions
+Your Mailing List Subscriptions
 </h1> 
 
-
-	
 	<!-- tmpl_if has_subscriptions --> 
 
 	<!-- tmpl_else --> 
@@ -162,6 +160,21 @@ Your Subscriptions
 
 	<!-- /tmpl_if --> 
 <!-- /tmpl_loop -->
+
+
+<!-- tmpl_if comment --> 
+
+	<!-- tmpl_if has_subscriptions --> 
+
+	<h1>Unsubscribe from ALL lists</h1> 
+
+	<form><input type="submit" value="Zoom!" /> </form> 
+
+
+	<!-- /tmpl_if -->  
+
+<!-- /tmpl_if --> 
+
 <hr /> 
 
 <!-- 
