--- a/dada/DADA/Template/templates/profile_reset_password.tmpl
+++ b/dada/DADA/Template/templates/profile_reset_password.tmpl
@@ -1,15 +1,30 @@
 <!-- begin profile_reset_password.tmpl --> 
 
-	<h1>Authorization Successful! Pick a New Password:</h1> 
+	<h1>Authorization Successful!</h1> 
+	
+	<fieldset>
+		<legend>Pick a New Password:</legend> 
 	
 	<form action="<!-- tmpl_var PROGRAM_URL -->" method="post" > 
 		<input type="hidden" name="f"     value="profile_reset_password"  /> 
 		<input type="hidden" name="email" value="<!-- tmpl_var email -->" /> 
 		<input type="hidden" name="auth_code" value="<!-- tmpl_var auth_code -->" />
 		<p>
-			Your New Password: <input type="password" name="password" value="" />
+			<label for="password">
+				Your New Password:
+			</label>
+			 <input type="password" name="password" id="password" value="" />
 		</p> 
-		<input type="submit" value="Reset Your Password and Login..." /> 
+	
+		<div class="buttonfloat">
+			<input type="submit" value="Reset Your Password and Login..." /> 
+		</div>
+		<div class="floatclear"></div>
+	
+	
+	
+	
 	</form> 
 	
+	</fieldset>
 <!-- end profile_reset_password.tmpl --> 
