--- a/dada/DADA/Template/templates/profile_reset_password_confirm.tmpl
+++ b/dada/DADA/Template/templates/profile_reset_password_confirm.tmpl
@@ -1,5 +1,17 @@
 <!-- begin profile_reset_password_confirm.tmpl --> 
 
-<p>Check your email for the authorization link, so you can change up your password, </p> 
+<h1>
+	Profile Reset Confirmation Email Sent!
+</h1>
+
+<p>
+	Please check your email inbox for <!-- tmpl_var profile.email --> for the profile password confirmation message. 
+</p>
+
+<p>
+	Follow the authorization link in the message, to reset your profile password!
+
+</p> 
+
 
 <!-- end profile_reset_password_confirm.tmpl --> 
